--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@ngtools/webpack": "^1.2.8",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.1.1",
     "ng2-bootstrap": "^1.3.2",
+    "ng2-page-scroll": "^4.0.0-beta.3",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
